fix letter spacing on list view header links

--- a/src/less/listview.less
+++ b/src/less/listview.less
@@ -5,19 +5,6 @@ html.cyclops {
     padding: 6px 0;
     text-transform: uppercase;
     .clearfix();
-    
-    .btn {
-      text-transform: uppercase;
-      font-size: 12px;
-      text-decoration: none;
-      font-weight: @baseFontWeight;
-      
-      &:active,
-      &:focus,
-      &:hover {
-        outline: none;
-      }
-    }
 
     h3 {
       padding: 0 15px;
@@ -27,10 +14,26 @@ html.cyclops {
       line-height: 20px;
       box-sizing: border-box;
       margin: 0;
-      
+
       &.bottom-align {
         padding-top: 36px;
       }
+
+      .btn {
+        text-transform: uppercase;
+        font-size: 12px;
+        text-decoration: none;
+        font-weight: @baseFontWeight;
+        letter-spacing: 1px;
+
+        &:active,
+        &:focus,
+        &:hover {
+          outline: none;
+        }
+      }
+
+
     }
 
     .heading {
@@ -55,7 +58,7 @@ html.cyclops {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    
+
     > li > a {
       text-decoration: none;
     }
@@ -68,11 +71,11 @@ html.cyclops {
       padding: 10px 0;
       .transition(e('background .05s ease-in'));
       .clearfix();
-      
+
       &.no-hover {
         cursor: default;
         background: none;
-        
+
         &:hover {
           background: none;
         }
@@ -117,10 +120,10 @@ html.cyclops {
 
     > li .list-view-editable-item {
       cursor: pointer;
-      
+
       &:hover {
         background: #ebebeb;
-        
+
         &.list-view-item-success {
           background-color: darken(@state-success-bg, 10%);
         }
@@ -146,7 +149,7 @@ html.cyclops {
     // handle nesting out to 12 levels after 6 levels the padding gets less
     // at 12 they are all the same.
     li {
-      
+
       // 0
       li {
         .col-indent {
@@ -230,7 +233,7 @@ html.cyclops {
       border-bottom: 1px solid @grayLighter;
       padding: 10px 0;
       text-align: center;
-      
+
       &:hover {
         background: none;
       }
@@ -245,7 +248,7 @@ html.cyclops {
         border-right: 1px solid @grayLighter;
         border-bottom: 1px solid @grayLighter;
         padding: 0 20px;
-        
+
         > svg.cyclops-icon {
           margin-top: 20px;
         }
@@ -259,7 +262,7 @@ html.cyclops {
           margin-right: auto;
           font-size: @font-size-base;
           max-width: 600px;
-          
+
           @media (min-width: @screen-sm-min) {
             font-size: @font-size-large;
           }
@@ -282,17 +285,17 @@ html.cyclops {
     .validationMessage {
       font-size: 13px;
       display: inline-block;
-      
+
       ul {
         margin: 0 0 10px 25px;
-        
+
         li {
           border-bottom: none;
           padding: initial;
           line-height: normal;
           cursor: default;
           list-style-type: disc;
-          
+
           &:hover {
             background-color: transparent;
           }
@@ -305,7 +308,7 @@ html.cyclops {
       border-bottom: 1px solid @grayLighter;
       padding: 0;
       text-align: center;
-      
+
       &:hover {
         background: none;
       }
@@ -317,7 +320,7 @@ html.cyclops {
       border: 1px solid @grayLighter;
       .box-shadow(inset 0 0 5px 0 rgba(0,0,0,.1) );
       padding: 10px 20px;
-      
+
       &:hover {
         background: #f5f5f5;
       }
@@ -337,7 +340,7 @@ html.cyclops {
         margin: 0 0 0 13px;
         list-style-type: disc;
         margin-bottom: 15px;
-        
+
         li {
           border: none;
           padding: 0;
@@ -378,7 +381,7 @@ html.cyclops {
         margin: 0;
         list-style-type: none;
         background-color: white;
-        
+
         &.custom-input-control {
           max-height: 200px;
           overflow: auto;
@@ -387,7 +390,7 @@ html.cyclops {
         li {
           padding: 0;
           border: none;
-          
+
           &:hover {
             background: #fff;
           }
@@ -454,7 +457,7 @@ html.cyclops {
       select.error,
       input.error {
         color: @textColor;
-        
+
         &:focus {
           .box-shadow(none);
         }
@@ -555,14 +558,14 @@ html.cyclops {
       display: none;
     }
     .new-list-view-responsive-expanded();
-    
+
     @media (max-width: 0px) {
       .new-list-view-responsive-collapsed();
     }
 
     &.new-list-view-responsive-sm {
       .new-list-view-responsive-expanded();
-      
+
       @media (max-width: @screen-xs-max) {
         .new-list-view-responsive-collapsed();
       }
@@ -570,7 +573,7 @@ html.cyclops {
 
     &.new-list-view-responsive-md {
       .new-list-view-responsive-expanded();
-      
+
       @media (max-width: @screen-sm-max) {
         .new-list-view-responsive-collapsed();
       }
@@ -578,7 +581,7 @@ html.cyclops {
 
     &.new-list-view-responsive-lg {
       .new-list-view-responsive-expanded();
-      
+
       @media (max-width: @screen-md-max) {
         .new-list-view-responsive-collapsed();
       }
@@ -598,11 +601,11 @@ html.cyclops {
     }
 
     li {
-      
+
       // 0
       li {
         .list-view-editable-item {
-          
+
           // 1
           padding-left: 15px;
         }
@@ -613,7 +616,7 @@ html.cyclops {
 
         li {
           .list-view-editable-item {
-            
+
             // 2
             padding-left: 30px;
           }
@@ -624,7 +627,7 @@ html.cyclops {
 
           li {
             .list-view-editable-item {
-              
+
               // 3
               padding-left: 45px;
             }
@@ -635,7 +638,7 @@ html.cyclops {
 
             li {
               .list-view-editable-item {
-                
+
                 // 4
                 padding-left: 60px;
               }
@@ -646,7 +649,7 @@ html.cyclops {
 
               li {
                 .list-view-editable-item {
-                  
+
                   // 5
                   padding-left: 90px;
                 }
@@ -657,7 +660,7 @@ html.cyclops {
 
                 li {
                   .list-view-editable-item {
-                    
+
                     // 6
                     padding-left: 105px;
                   }
@@ -668,7 +671,7 @@ html.cyclops {
 
                   li {
                     .list-view-editable-item {
-                      
+
                       // 7
                       padding-left: 110px;
                     }
@@ -679,7 +682,7 @@ html.cyclops {
 
                     li {
                       .list-view-editable-item {
-                        
+
                         // 8
                         padding-left: 115px;
                       }
@@ -690,7 +693,7 @@ html.cyclops {
 
                       li {
                         .list-view-editable-item {
-                          
+
                           // 9
                           padding-left: 120px;
                         }
@@ -701,7 +704,7 @@ html.cyclops {
 
                         li {
                           .list-view-editable-item {
-                            
+
                             // 10
                             padding-left: 125px;
                           }
@@ -712,7 +715,7 @@ html.cyclops {
 
                           li {
                             .list-view-editable-item {
-                              
+
                               // 11
                               padding-left: 130px;
                             }
@@ -723,7 +726,7 @@ html.cyclops {
 
                             li {
                               .list-view-editable-item {
-                                
+
                                 // 12
                                 padding-left: 135px;
                               }
@@ -749,7 +752,7 @@ html.cyclops {
       float: none;
       margin-bottom: 15px;
       text-align: initial !important;
-      
+
       &:last-child {
         margin-bottom: 0;
       }
